--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "homepage": "https://github.com/birkmann/gulp-template",
   "devDependencies": {
-    "gulp-autoprefixer": "^2.0.0",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-changed": "^1.0.0",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.2",
     "gulp-imagemin": "^2.0.0",
     "gulp-jshint": "^1.9.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.7",
+    "gulp-rename": "^1.2.0",
+    "gulp-rimraf": "^0.1.1",
     "gulp-sass": "^1.1.0",
     "gulp-uglify": "^1.0.1"
   }
