--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-sass": "^1.1.0",
+    "gulp-server-livereload": "^1.2.1",
     "gulp-uglify": "^1.0.1"
   }
 }
