--- a/package.json
+++ b/package.json
@@ -1,34 +1,21 @@
 {
-  "name": "gulp-template",
+  "name": "YourProject",
   "version": "0.0.1",
-  "description": "A basic gulp-template.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/birkmann/gulp-template.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/birkmann/gulp-template/issues"
-  },
-  "homepage": "https://github.com/birkmann/gulp-template",
+  "description": "Description of your project",
+  "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.5.3",
+    "gulp": "^3.8.1",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.0.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.4.2",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-jshint": "^1.9.0",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-minify-html": "^0.1.7",
-    "gulp-rename": "^1.2.0",
-    "gulp-rimraf": "^0.1.1",
-    "gulp-sass": "^1.1.0",
-    "gulp-server-livereload": "^1.2.1",
-    "gulp-uglify": "^1.0.1"
+    "gulp-concat": "^2.5.2",
+    "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-sequence": "^0.3.2",
+    "gulp-shell": "^0.4.0",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4"
   }
 }
